# aoc23

./: .gitignore
01/: 01  01.cpp  Makefile  input_short.txt  p1.cpp  p2.cpp
02/: Makefile  p1.cpp  p2.cpp
03/: Makefile  p1.cpp  p2.cpp  structs.h
04/: input_short.txt  p1.cpp  p2.cpp
05/: p1.cpp
06/: p1.cpp
07/: p2.cpp
08/: p1.cpp  p2.cpp
09/: p1.cpp
10/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  p1.cpp  p2.cpp  types.h
